[workspace.package]
version = "0.1.0"
authors = ["ccollie <collie.clayton@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "A promql execution engine"
homepage = "https://github.com/ccolle/metricsql"
repository = "https://github.com/ccolle/metricsql"
keywords = ["promql", "prometheus", "observability", "metrics"]
readme = "README.md"

[workspace]
members = [
    "metricsql_common",
    "metricsql_encoding",
    "metricsql_parser",
    "metricsql_engine"
]
resolver = "2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
ahash = { version = "0.8", features = ["std", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8.2"
enquote = "1.1.0"
itertools = "0.11.0"
num-traits = "0.2.17"
q_compress = "0.11.7"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.8.0"
regex = "1.8.4"
regex-syntax = "0.8.2"
rs_unit = "0.0.2"
scopeguard = "1.2.0"
serde = { version = "1", features = ["derive"] }
serde_with = "3"
test-case = "3"
tinyvec = { version = "1.6.0", features = ["alloc"] }
tracing = "0.1.39"
phf = { version = "0.11.2", features = ["macros"] }
thiserror = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }


[profile.release]
lto = "fat"