[workspace.package]
version = "0.1.0"
authors = ["ccollie <collie.clayton@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "A promql execution engine"
homepage = "https://github.com/ccolle/metricsql"
repository = "https://github.com/ccolle/metricsql"
keywords = ["promql", "prometheus", "observability", "metrics"]
readme = "README.md"

[workspace]
members = [
    "metricsql_common",
    "metricsql_datafusion",
    "metricsql_encoding",
    "metricsql_parser",
    "metricsql_engine"
]
resolver = "2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
ahash = { version = "0.8", features = ["std", "serde"] }
async-trait = "0.1.77"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
enquote = "1.1.0"
futures = "0.3"
gxhash = "3.0.0"
integer-encoding = "4.0.0"
itertools = "0.12"
lazy_static = "1.4.0"
metricsql_common = { path = "metricsql_common" }
metricsql_datafusion = { path = "metricsql_datafusion" }
metricsql_parser = { path = "metricsql_parser" }
num-traits = "0.2"
once_cell = "1.19.0"
pretty_assertions = "1.4.0"
q_compress = "0.11.7"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.8.0"
regex = "1.8.4"
regex-syntax = "0.8.2"
rs_unit = "0.0.2"
scopeguard = "1.2.0"
serde = { version = "1", features = ["derive"] }
serde_with = "3"
serde_json = "1.0.108"
snafu = "0.8.0"
strum = "0.25.0"
test-case = "3"
tinyvec = { version = "1.6.0", features = ["alloc", "rustc_1_57"] }
tracing = "0.1.40"
phf = { version = "0.11.2", features = ["macros"] }
thiserror = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

arrow = "47.0.0"

[profile.release]
lto = "fat"
