[package]
name = "metricsql_common"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name="metricsql_common"
path="src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agnostic-lite.workspace = true
ahash.workspace = true
cfg-if.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
dynamic-lru-cache.workspace = true
byte-pool = "0.2"
futures.workspace = true
gxhash.workspace = true
get-size.workspace = true
integer-encoding.workspace = true
lockfree-object-pool = "0.1"
lru_time_cache = "0.11"
rand.workspace = true
rand_distr.workspace = true
regex.workspace = true
regex-syntax.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_regex.workspace = true
snafu.workspace = true
xxhash-rust.workspace = true
strum.workspace = true
strum_macros.workspace = true

[dev-dependencies]
test-case.workspace = true

[features]
default = ["tokio"]
tokio = ["agnostic-lite/tokio"]
async-std = ["agnostic-lite/async-std"]
smol = ["agnostic-lite/smol"]
