[package]
name = "metricsql_encoding"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
integer-encoding.workspace = true
snafu.workspace = true
snap = "1.1.0"
pco.workspace = true

[dev-dependencies]
flate2 = "1.0"
hex = "0.4.3"
rand = { workspace = true }
