[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[lib]
name="lib"
path="src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { worspace = true }
once_cell = { workspace = true }
byte-pool = "0.2.3"
lockfree-object-pool = "0.1.3"
q_compress = "0.11.1"
byte-slice-cast = "1.2.1"
integer-encoding = "3.0.4"
lz4_flex = "0.9.5"
rand = "0.8.5"
instant = "0.1.12"
tinyvec = "1.6.0"
xxhash-rust = { workspace = true }
