[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[lib]
name="lib"
path="src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
once_cell = { workspace = true }
byte-pool = "0.2.3"
lockfree-object-pool = "0.1.3"
q_compress = "0.11.4"
byte-slice-cast = "1.2.1"
integer-encoding = "3.0.4"
lz4_flex = "0.10.0"
rand = { workspace = true }
rand_distr = { workspace = true }
regex-syntax = { workspace = true }
tinyvec = { workspace = true }
xxhash-rust = { workspace = true }
