[package]
name = "lib"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name="lib"
path="src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
chrono-tz = { workspace = true }
byte-pool = "0.2.3"
lockfree-object-pool = "0.1.3"
byte-slice-cast = "1.2.1"
integer-encoding = "4.0.0"
lz4_flex = "0.11.0"
q_compress = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
regex-syntax = { workspace = true }
tinyvec = { workspace = true }
xxhash-rust = { workspace = true }
