[package]
name = "metricsql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = { workspace = true }
enquote = { workspace = true }
logos = "0.13.0"
logos-derive = "0.13.0"
phf = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
scopeguard = { workspace = true }
thiserror = { workspace = true }
tinyvec = { workspace = true }
xxhash-rust = { version = "0.8.6", features = ["xxh3", "xxh64"] }
lib = { path = "../lib" }

[dev-dependencies]
test-case = "3.1.0"

[lib]
name="metricsql"