[package]
name = "metricsql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = { wokspace = true }
either = { workspace = true }
enquote = { workspace = true }
logos = "0.13.0"
once_cell = { workspace = true }
phf = { workspace = true }
regex = { workspace = true }
regex-syntax = "0.7.4"
serde = { workspace = true }
scopeguard = { workspace = true }
thiserror = { workspace = true }
lib = { path = "../lib" }

[dev-dependencies]
test-case = "2.2.2"

[lib]
name="metricsql"
path="src/lib.rs"