[package]
name = "metricsql"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = { workspace = true }
enquote = { workspace = true }
logos = "0.13.0"
logos-derive = "0.13.0"
num-traits = { workspace = true }
phf = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
scopeguard = { workspace = true }
strum = "0.25.0"
strum_macros = "0.25.1"
thiserror = { workspace = true }
tinyvec = { workspace = true }
xxhash-rust = { version = "0.8.6", features = ["xxh3", "xxh64"] }
lib = { path = "../lib" }

[dev-dependencies]
test-case = "3.1.0"

[lib]
name="metricsql"