[package]
name = "metricsql_common"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name="metricsql_common"
path="src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agnostic = "0.2.7"
ahash.workspace = true
arrow.workspace = true
byte-pool = "0.2.4"
cfg-if = { version = "1.0.0", features = [] }
chrono.workspace = true
chrono-tz.workspace = true
dynamic-lru-cache = "0.2.1"
futures.workspace = true
gxhash.workspace = true
lockfree-object-pool = "0.1.4"
rand.workspace = true
rand_distr.workspace = true
regex.workspace = true
regex-syntax.workspace = true
snafu.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tinyvec.workspace = true
xxhash-rust.workspace = true
once_cell.workspace = true

[dev-dependencies]
test-case.workspace = true

[features]
default = ["tokio"]
tokio = ["agnostic/tokio"]
async-std = ["agnostic/async-std"]
smol = ["agnostic/smol"]
