[package]
name = "metricsql_engine"
description = "A promql execution engine"
resolver = "2"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
rs_unit = { workspace = true }

[dependencies]
ahash = { workspace = true }
async_executors = "0.7.0"
async-std = { version = "1.12.0", optional = true }
async-trait = "0.1.74"
enquote = { workspace = true }
byte-slice-cast = "1.2.2"
byte-pool = "0.2.4"
clone_dyn = "0.4.0"
chrono = { workspace = true }
chrono-tz = { workspace = true }
effective-limits = "0.5.5"
futures = "0.3.29"
integer-encoding = { workspace = true }
itertools = { workspace = true }
lockfree-object-pool = "0.1.4"
lru_time_cache = "0.11.11"
num-traits = { workspace = true }
phf = { workspace = true }
prometheus-parse = "0.2.4"
q_compress = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tinyvec = { workspace = true }
topologic = "1.0.0"
tokio = { version = "1", optional = true }
scopeguard = { workspace = true }
tracing = { workspace = true }
xxhash-rust = { workspace = true }
metricsql_common={ path = "../metricsql_common" }
metricsql_parser={ path = "../metricsql_parser" }
metricsql_testing = { path = "../metricsql_testing" }
once_cell = "1.19.0"

[features]
default = ["tokio_tp"]
tokio_tp = ["dep:tokio", "async_executors/tokio_tp", "async_executors/tokio_timer"]
tokio_ct = ["dep:tokio", "async_executors/tokio_ct", "async_executors/tokio_timer"]
async_std = ["dep:async-std", "async_executors/async_std"]