[package]
name = "metricsql_parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ahash = { workspace = true }
chrono = { workspace = true }
enquote = { workspace = true }
logos = "0.13.0"
logos-derive = "0.13.0"
num-traits = { workspace = true }
phf = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
scopeguard = { workspace = true }
strum = "0.25"
strum_macros = "0.25"
thiserror = { workspace = true }
tinyvec = { workspace = true }
xxhash-rust = { workspace = true }
metricsql_common = { path = "../metricsql_common" }

[dev-dependencies]
test-case.workspace = true
pretty_assertions.workspace = true

[lib]
name="metricsql_parser"