[package]
name = "metricsql_redis"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
metricsql_common = { path = "../metricsql_common" }
metricsql_engine = { path = "../metricsql_engine" }
metricsql_parser = { path = "../metricsql_parser" }
rustis = { version = "0.12", features = ["redis-time-series"] }
regex-syntax = { workspace = true }
tokio = "1.34"
