[package]
name = "metricsql_redis_ts"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { workspace = true }
async-trait = "0.1.74"
futures = "0.3.29"
metricsql_common = { path = "../metricsql_common" }
metricsql_engine = { path = "../metricsql_engine" }
metricsql_parser = { path = "../metricsql_parser" }
rustis = { version = "0.12", features = ["redis-time-series"] }
regex-syntax = { workspace = true }

[dev-dependencies]
clap = "4.4.11"

[features]
default = ["metricsql_engine/default"]
tokio_tp = ["metricsql_engine/tokio-runtime", "rustis/tokio-runtime"]
tokio_tls = ["metricsql_engine/tokio-runtime", "rustis/tokio-tls"]
async-std-runtime = ["metricsql_engine/async-std-runtime", "rustis/async-std-runtime"]
async-std-tls = ["metricsql_engine/async-std-runtime", "rustis/async-std-tls"]