[package]
name = "runtime"
version = "0.1.0"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { workspace = true }
enquote = { workspace = true }
regex = { workspace = true }
byte-slice-cast = "1.2.1"
byte-pool = "0.2.3"
clone_dyn = "0.1.0"
chrono = { workspace = true }
chrono-tz = { workspace = true }
once_cell = { workspace = true }
effective-limits = "0.5.4"
integer-encoding = "3.0.4"
lockfree-object-pool = "0.1.3"
lru_time_cache = "0.11.11"
minitrace = "0.4.0"
minstant = "0.1.2"
q_compress = { workspace = true }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = { workspace = true }
thiserror = { workspace = true }
scopeguard = "1.1.0"
pydeco = "0.1.0"
tinyvec = { workspace = true }
xxhash-rust = { version = "0.8.5", features = ["xxh3", "xxh64"] }
lib={ path = "../lib" }
metricsql={ path = "../metricsql" }

[profile.release]
lto = true
