[package]
name = "runtime"
version = "0.1.0"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]

[dependencies]
phf = { workspace = true }
enquote = { workspace = true }
byte-slice-cast = "1.2.2"
byte-pool = "0.2.4"
clone_dyn = "0.1.0"
chrono = { workspace = true }
chrono-tz = { workspace = true }
effective-limits = "0.5.5"
integer-encoding = "3.0.4"
itertools = { workspace = true }
lockfree-object-pool = "0.1.4"
lru_time_cache = "0.11.11"
num-traits = { workspace = true }
prometheus-parse = "0.2.3"
q_compress = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
rs_unit = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tinyvec = { workspace = true }
tokio = { version = "1.12.0" }
scopeguard = { workspace = true }
tracing = { workspace = true }
xxhash-rust = { version = "0.8.6", features = ["xxh3", "xxh64"] }
lib={ path = "../lib" }
metricsql={ path = "../metricsql" }

