[package]
name = "metricsql_runtime"
description = "A promql execution engine"
resolver = "2"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
rs_unit = { workspace = true }

[dependencies]
agnostic-lite = {  version = "0.3", default-features = false, features = ["time"] }
ahash.workspace = true
async-std = { version = "1.12", optional = true }
async-trait = "0.1"
enquote.workspace = true
byte-slice-cast = "1.2"
byte-pool.workspace = true
clone_dyn = "0.23"
chrono.workspace = true
chrono-tz.workspace = true
effective-limits = "0.5"
futures.workspace = true
integer-encoding.workspace = true
itertools.workspace = true
lockfree-object-pool = "0.1"
lru_time_cache = "0.11"
num-traits.workspace = true
phf.workspace = true
prometheus-parse = "0.2"
pco.workspace = true
rand.workspace = true
rand_distr.workspace = true
rayon.workspace = true
regex.workspace = true
serde.workspace = true
thiserror.workspace = true
tinyvec.workspace = true
topologic = "1.1"
tokio = { version = "1.39", optional = true }
scopeguard.workspace = true
tracing.workspace = true
xxhash-rust.workspace = true
metricsql_common={ path = "../common" }
metricsql_parser={ path = "../parser" }
matchers = { version = "0.2.0", features = [] }
static_assertions = "1.1.0"

[features]
default = ["tokio"]
tokio = ["dep:tokio", "agnostic-lite/tokio"]
async-std = ["dep:async-std", "agnostic-lite/async-std"]

[target.'cfg(target_arch = "x86_64")']
rustflags = ["-C", "target-feature=+bmi1,+bmi2,+avx2"]